my five assignment done

--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                  </div>
             </div>
 
-            <div id="back-home" class="change-color col-span-2 flex  items-center px-8 mt-6 space-x-2  rounded-lg">
+            <div class="change-color col-span-2 flex  items-center px-8 mt-6 space-x-2  rounded-lg">
                 <div class="border-dashed border-black ">
                     <img src="./assets/board.png" alt="">
                 </div>
                 
                 <a href="http://127.0.0.1:5500/questions.html">
-                    <h2 class="text-xl text-[#FFFFFF]">
+                    <h2 id="back-home" class="text-xl text-[#FFFFFF]">
                         Discover Something<br>
                         New Today!
                     </h2>
@@ -68,8 +68,8 @@
                     <img src="./assets/calender.png" alt="">
                 </div>
                 <div>
-                    <h2 id="present-day">Wed ,</h2>
-                    <p class="text-lg font-bold" id="present-month">Jul 28 2025</p>
+                    <h2 id="present-day"></h2>
+                    <p class="text-lg font-bold" id="present-month"></p>
                 </div>
             </div>
 
