--- a/questions.html
+++ b/questions.html
@@ -124,7 +124,7 @@
 
 </footer>
 
-<script src="script/layout.js"></script>
+<!-- <script src="script/layout.js"></script> -->
 <script src="script/scripits.js"></script>
 
 
