--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="./assets/board.png" alt="">
                 </div>
                 
-                <a href="https://sanyahamed.github.io/my-Five---Assignment/questions.html">
+                <a href="/questions.html">
                     <h2 id="back-home" class="text-xl text-[#FFFFFF]">
                         Discover Something<br>
                         New Today!
